Bug #21384 Incorrect schema version in unique index read can lead to signal 11
Submitted: 1 Aug 2006 11:09 Modified: 6 Sep 2006 13:10
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:
Assigned to: Jonas Oreland Target Version:

[1 Aug 2006 11:09] Jonas Oreland
Description:
If readIndexTable is aborted (e.i due to invalid schema version) all keyinfo buffers are
released...however readIndexTable does not check this, and continue to  
do execKEYINFO, but buffers are released...

How to repeat:
 

Suggested fix:
[1 Aug 2006 16:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/9895

ChangeSet@1.2514, 2006-08-01 16:55:41+02:00, jonas@perch.ndb.mysql.com +5 -0
  ndb - bug#21384
    handle error in TCKEYREQ during TCINDXREQ better
[3 Aug 2006 15:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10008

ChangeSet@1.2234, 2006-08-03 15:38:04+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#21384
    merge 4.1->5.0 (variable rename)
[1 Sep 2006 10:10] Jonas Oreland
pushed to 5.1.12
[1 Sep 2006 21:34] Jonas Oreland
pushed to 5.0.25
[6 Sep 2006 9:12] Jonas Oreland
pushed into 4.1.22
[6 Sep 2006 13:10] Jon Stephens
Documented bugfix in 4.1.22/5.0.25/5.1.12 changelogs.