ndb - bug#21384   merge 4.1->5.0 (variable rename)

ndb/src/kernel/blocks/dbtc/DbtcMain.cpp:
  merge #21384 4.1->5.0
    variable rename